# Vaccination_rates

./: Copy_of_Data_analysis_Project_15_12_21.ipynb  README.md  Vaccination_rates.ipynb  Vaccination_rates_supplementary.ipynb  World_vaccination_data_analysis - 27-11-21.ipynb  World_vaccination_data_analysis.ipynb  pyproject.toml
notebooks/: 0_eda.ipynb  1_data_processing.ipynb  2_forecasting.ipynb
