[tool.poetry]
name = "vaccination-programs"
version = "0.1.0"
description = ""
authors = ["Konstantin Burkin <konstantin.burkin.m@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
matplotlib = "^3.10.1"
scikit-learn = "^1.6.1"
pyarrow = "^19.0.1"
fastparquet = "^2024.11.0"
openpyxl = "^3.1.5"
tqdm = "^4.67.1"
statsmodels = "^0.14.4"
pmdarima = "^2.0.4"
numpy = "1.26.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
